# ukrainian-news-recommender

./: .gitignore  auth.py  main.py  personews.db  pyproject.toml  scheduler.py
ml/: embeddings.py
