[project]
name = "personews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.138.0",
    "feedparser>=6.0.12",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-jose>=3.5.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
